--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -3,7 +3,7 @@
     background-size: cover;
     background-position-x: center;
     background-position-y: center;
-    padding-top: 200px;
+    padding-top: 150px;
     padding-bottom: 50px;
 }
 
@@ -13,7 +13,7 @@
     font-weight: bold;
     font-size: 28px;
     opacity: 0.8;
-    margin: 10px;
+    margin-left: 20px;
 }
 
 .description {
@@ -21,5 +21,34 @@
     font-family: 'Poppins', sans-serif;
     font-size: 20px;
     opacity: 0.8;
-    margin: 10px;
+    margin-left: 50px;
+}
+
+#grid {
+    background-color: #8d6e63;
+    height: 100%;
+    display: grid;
+    grid-template-rows: auto auto auto;
+    grid-template-columns: auto auto auto;
+    grid-column-gap: 1rem;
+    grid-row-gap: 1rem;
+    padding: 1rem;
+    align-items: center;
+    justify-content: center;
+}
+
+@media only screen and (max-width: 1200px) {
+    #grid {
+      grid-template-rows: auto auto;
+      grid-template-columns: auto auto;
+    }
+  }
+
+.card {
+    width: 400px;
+    background-color: #66bb6a;
+}
+
+.dropdown {
+    margin: 15px;
 }
