--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,3 +3,47 @@
     <div class="description">TrailFinder is designed to help you locate popular hiking, biking, and running spots in your area!</div>
     <div class="description">Select your location or activity, or select from one of our featured trails of the week!</div>
 </div>
+
+<div id="grid">
+    <mat-card class="card">
+        <mat-card-header>
+            <mat-card-title class="title">Find Trails By Location</mat-card-title>
+            <mat-card-subtitle>Select a location from the dropdown below</mat-card-subtitle>
+        </mat-card-header>
+
+        <mat-card-content>
+                <mat-form-field class="dropdown">
+                        <mat-label>Location</mat-label>
+                        <mat-select>
+                                <mat-option *ngFor="let location of locations" [value]="location.name">
+                                    {{location.name}}
+                                </mat-option>
+                            </mat-select>
+                    </mat-form-field>
+        </mat-card-content>
+    </mat-card>
+
+    <mat-card class="card">
+            <mat-card-header>
+                <mat-card-title>Featured Trails</mat-card-title>
+            </mat-card-header>
+        </mat-card>
+
+    <mat-card class="card">
+        <mat-card-header>
+            <mat-card-title>Find Trails By Activity</mat-card-title>
+            <mat-card-subtitle>Select an activity from the dropdown below</mat-card-subtitle>
+        </mat-card-header>
+
+        <mat-card-content>
+                <mat-form-field class="dropdown">
+                        <mat-label>Activity</mat-label>
+                        <mat-select>
+                                <mat-option *ngFor="let activity of activities" [value]="activity.name">
+                                    {{activity.name}}
+                                </mat-option>
+                            </mat-select>
+                    </mat-form-field>
+        </mat-card-content>
+    </mat-card>
+</div>
