--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,14 +1,20 @@
+.page {
+    background-color: #8d6e63; 
+}
+
 .main-container {
     background-image: linear-gradient( rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 1)), url("../../assets/trail.jpg");
     background-size: cover;
     background-position-x: center;
     background-position-y: center;
+    border-bottom-left-radius: 50px;
+    border-bottom-right-radius: 50px;
     padding-top: 150px;
     padding-bottom: 50px;
 }
 
 .welcome-message {
-    color: white;
+    color: gainsboro;
     font-family: 'Poppins', sans-serif;
     font-weight: bold;
     font-size: 28px;
@@ -17,7 +23,7 @@
 }
 
 .description {
-    color: white;
+    color: gainsboro;
     font-family: 'Poppins', sans-serif;
     font-size: 20px;
     opacity: 0.8;
@@ -32,7 +38,7 @@
     grid-template-columns: auto auto auto;
     grid-column-gap: 1rem;
     grid-row-gap: 1rem;
-    padding: 1rem;
+    padding: 5rem;
     align-items: center;
     justify-content: center;
 }
@@ -46,9 +52,37 @@
 
 .card {
     width: 400px;
-    background-color: #66bb6a;
+    background-color: #388e3c;
+    color: gainsboro;
+}
+
+.subtitle {
+    color: gainsboro;
 }
 
 .dropdown {
     margin: 15px;
+}
+
+.footer {
+    background-color: #388e3c;
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
+}
+
+.info-card {
+    width: 200px;
+    margin-top: 10px;
+    text-align: center;
+}
+
+.about {
+    margin-left: 50px;
+    padding-top: 10px;
+    color: gainsboro;
+}
+
+.avatar {
+    width: 100px;
+    height: 100px;
 }
