--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,49 +1,61 @@
-<div class="main-container">
-    <div class="welcome-message">Welcome to TrailFinder!</div>
-    <div class="description">TrailFinder is designed to help you locate popular hiking, biking, and running spots in your area!</div>
-    <div class="description">Select your location or activity, or select from one of our featured trails of the week!</div>
-</div>
+<div class="page">    
+    <div class="main-container">
+        <div class="welcome-message">Welcome to TrailFinder!</div>
+        <div class="description">TrailFinder is designed to help you locate popular hiking, biking, and running spots in your area!</div>
+        <div class="description">Select your location or activity, or select from one of our featured trails of the week!</div>
+    </div>
 
-<div id="grid">
-    <mat-card class="card">
-        <mat-card-header>
-            <mat-card-title class="title">Find Trails By Location</mat-card-title>
-            <mat-card-subtitle>Select a location from the dropdown below</mat-card-subtitle>
-        </mat-card-header>
-
-        <mat-card-content>
-                <mat-form-field class="dropdown">
-                        <mat-label>Location</mat-label>
-                        <mat-select>
-                                <mat-option *ngFor="let location of locations" [value]="location.name">
-                                    {{location.name}}
-                                </mat-option>
-                            </mat-select>
-                    </mat-form-field>
-        </mat-card-content>
-    </mat-card>
-
-    <mat-card class="card">
+    <div id="grid">
+        <mat-card class="card">
             <mat-card-header>
-                <mat-card-title>Featured Trails</mat-card-title>
+                <mat-card-title class="title">Find Trails By Location</mat-card-title>
+                <mat-card-subtitle class="subtitle">Select a location from the dropdown below</mat-card-subtitle>
             </mat-card-header>
+
+            <mat-card-content>
+                    <mat-form-field class="dropdown">
+                            <mat-label>Location</mat-label>
+                            <mat-select>
+                                    <mat-option *ngFor="let location of locations" [value]="location.name">
+                                        {{location.name}}
+                                    </mat-option>
+                                </mat-select>
+                        </mat-form-field>
+            </mat-card-content>
         </mat-card>
 
-    <mat-card class="card">
-        <mat-card-header>
-            <mat-card-title>Find Trails By Activity</mat-card-title>
-            <mat-card-subtitle>Select an activity from the dropdown below</mat-card-subtitle>
-        </mat-card-header>
+        <mat-card class="card">
+                <mat-card-header>
+                    <mat-card-title>Featured Trails</mat-card-title>
+                </mat-card-header>
+            </mat-card>
 
-        <mat-card-content>
-                <mat-form-field class="dropdown">
-                        <mat-label>Activity</mat-label>
-                        <mat-select>
-                                <mat-option *ngFor="let activity of activities" [value]="activity.name">
-                                    {{activity.name}}
-                                </mat-option>
-                            </mat-select>
-                    </mat-form-field>
-        </mat-card-content>
-    </mat-card>
+        <mat-card class="card">
+            <mat-card-header>
+                <mat-card-title class="title">Find Trails By Activity</mat-card-title>
+                <mat-card-subtitle class="subtitle">Select an activity from the dropdown below</mat-card-subtitle>
+            </mat-card-header>
+
+            <mat-card-content>
+                    <mat-form-field class="dropdown">
+                            <mat-label>Activity</mat-label>
+                            <mat-select>
+                                    <mat-option *ngFor="let activity of activities" [value]="activity.name">
+                                        {{activity.name}}
+                                    </mat-option>
+                                </mat-select>
+                        </mat-form-field>
+            </mat-card-content>
+        </mat-card>
+    </div>
+
+    <div class="footer">
+        <h2 class="about">About Me</h2>
+        <mat-card class="info-card">
+            <img src="https://avatars.githubusercontent.com/charleslambert98" target="_blank" class="avatar">
+            <h3 class="name">Charles Lambert</h3>
+            <a mat-button href="https://github.com/charleslambert98" class="profile-link">GitHub</a>
+            <a mat-button href="mailto: clambert@udel.edu">clambert@udel.edu</a>
+        </mat-card>
+    </div>
 </div>
