--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,88 +1,109 @@
 .page {
-    background-color: #8d6e63; 
+  background-color: #8d6e63;
 }
 
 .main-container {
-    background-image: linear-gradient( rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 1)), url("../../assets/trail.jpg");
-    background-size: cover;
-    background-position-x: center;
-    background-position-y: center;
-    border-bottom-left-radius: 50px;
-    border-bottom-right-radius: 50px;
-    padding-top: 150px;
-    padding-bottom: 50px;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 1)),
+    url("../../assets/trail.jpg");
+  background-size: cover;
+  background-position-x: center;
+  background-position-y: center;
+  border-bottom-left-radius: 30px;
+  border-bottom-right-radius: 30px;
+  padding-top: 150px;
+  padding-bottom: 100px;
 }
 
 .welcome-message {
-    color: gainsboro;
-    font-family: 'Poppins', sans-serif;
-    font-weight: bold;
-    font-size: 28px;
-    opacity: 0.8;
-    margin-left: 20px;
+  color: gainsboro;
+  font-family: "Poppins", sans-serif;
+  font-weight: bold;
+  font-size: 28px;
+  margin-left: 20px;
 }
 
 .description {
-    color: gainsboro;
-    font-family: 'Poppins', sans-serif;
-    font-size: 20px;
-    opacity: 0.8;
-    margin-left: 50px;
+  color: gainsboro;
+  font-family: "Poppins", sans-serif;
+  font-size: 20px;
+  margin-left: 50px;
 }
 
 #grid {
-    background-color: #8d6e63;
-    height: 100%;
-    display: grid;
-    grid-template-rows: auto auto auto;
-    grid-template-columns: auto auto auto;
-    grid-column-gap: 1rem;
-    grid-row-gap: 1rem;
-    padding: 5rem;
-    align-items: center;
-    justify-content: center;
+  background-color: #8d6e63;
+  height: 100%;
+  display: grid;
+  grid-template-rows: auto auto auto;
+  grid-template-columns: auto auto auto;
+  grid-column-gap: 1rem;
+  grid-row-gap: 1rem;
+  padding: 5rem;
+  align-items: center;
+  justify-content: center;
 }
 
 @media only screen and (max-width: 1200px) {
-    #grid {
-      grid-template-rows: auto auto;
-      grid-template-columns: auto auto;
-    }
+  #grid {
+    grid-template-rows: auto auto;
+    grid-template-columns: auto auto;
   }
+}
+
+@media only screen and (max-width: 800px) {
+  #grid {
+    grid-template-rows: auto;
+    grid-template-columns: auto;
+  }
+}
 
 .card {
-    width: 400px;
-    background-color: #388e3c;
-    color: gainsboro;
+  width: 400px;
+  background-color: #388e3c;
+  color: gainsboro;
 }
 
 .subtitle {
-    color: gainsboro;
+  color: gainsboro;
 }
 
 .dropdown {
-    margin: 15px;
+  margin: 15px;
 }
 
 .footer {
-    background-color: #388e3c;
-    border-top-left-radius: 50px;
-    border-top-right-radius: 50px;
+  background-color: #388e3c;
+  border-top-left-radius: 30px;
+  border-top-right-radius: 30px;
+  padding-bottom: 10px;
 }
 
 .info-card {
-    width: 200px;
-    margin-top: 10px;
-    text-align: center;
+  background-color: #8d6e63;
+  color: gainsboro;
+  width: 200px;
+  margin-top: 10px;
+  text-align: center;
+  margin: 0 auto;
 }
 
 .about {
-    margin-left: 50px;
-    padding-top: 10px;
-    color: gainsboro;
+  font-family: "Poppins", sans-serif;
+  margin-left: 50px;
+  padding-top: 10px;
+  color: gainsboro;
 }
 
 .avatar {
-    width: 100px;
-    height: 100px;
+  width: 100px;
+  height: 100px;
+  border-radius: 10px;
+}
+
+.name {
+  font-family: "Poppins", sans-serif;
+}
+
+.link {
+  font-family: "Poppins", sans-serif;
+  margin: 2px;
 }
