--- a/src/app/navigation/navigation.component.css
+++ b/src/app/navigation/navigation.component.css
@@ -1,10 +1,10 @@
 .nav {
-    position: fixed;
-    top: 0;
-    opacity: 0.8;
+  position: sticky;
+  top: 0;
+  opacity: 0.8;
 }
 
 .menu-button {
-    font-family: 'Poppins', sans-serif;
-    margin: 5px;
+  font-family: "Poppins", sans-serif;
+  margin: 5px;
 }
