--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,6 +1,24 @@
 <mat-toolbar class="nav" color="accent">
-    <button class="menu-button" mat-flat-button color="primary">Home</button>
-    <button class="menu-button" mat-flat-button color="accent">Find Trails</button>
-    <button class="menu-button" mat-flat-button color="accent">Get Gear</button>
-    <button class="menu-button" mat-flat-button color="accent">About</button>
+  <button class="menu-button" mat-flat-button color="primary" routerLink="">
+    Home
+  </button>
+  <button
+    class="menu-button"
+    mat-flat-button
+    color="accent"
+    routerLink="/trails"
+  >
+    Find Trails
+  </button>
+  <button class="menu-button" mat-flat-button color="accent" routerLink="/gear">
+    Get Gear
+  </button>
+  <button
+    class="menu-button"
+    mat-flat-button
+    color="accent"
+    routerLink="/about"
+  >
+    About
+  </button>
 </mat-toolbar>
